fix: Remove synchronization